# youtube_production2

./: .env.example  .gitattributes  .gitignore  .rgignore  00_research  50_tools  AGENTS.md  DECLARATION.txt  LLM_LAYER_REFACTOR_PLAN.md  README.md  START_HERE.md  _bootstrap.py  audio_tts_v2  baghdad_battery_script_edited.txt  commentary_02_srt2images_timeline  docs  factory_common  idea  new_article.txt  progress  pyproject.toml  pyrightconfig.json  remotion  script_japanese.txt  script_japanese_section6_addendum.txt  script_output.txt  script_pipeline  script_section6.txt  sitecustomize.py  start.sh  thumbnails  【消さないで！人間用】確定ロジック
00_research/: .env.sample  benchmarks_ch07_ch08.md
audio_tts_v2/: README_rules.txt  legacy_archive
backups/: README.md
commentary_02_srt2images_timeline/: PROJ.json  README.md  ch02_capcut_draft_creation_process.md  channel_preset.json  check_gemini_key.py  config.toml  image_cues.json  persona.txt  system_prompt_for_image_generation.txt  test_gemini_25_flash_image.py  プロンプト
configs/: README.md  agent_runbooks.yaml  codex_exec.yaml  drive_oauth_client.json  image_model_slots.yaml  image_models.yaml  image_style_presets.yaml  image_task_overrides.yaml  llm.yml  llm_exec_slots.yaml  llm_model_codes.yaml  llm_model_slots.yaml  llm_registry.json  llm_router.yaml  llm_task_overrides.yaml  llm_tier_candidates.yaml  llm_tier_mapping.yaml  longform_block_templates.json  sources.yaml  ui_settings.json
data/: visual_bible.json
docs/: 404.html  BELT_GENERATION_IMPLEMENTATION.md  CH02_CAPCUT_PIPELINE.md  CLI_DESIGN_POLICY.md  LLM_CONTEXT_ANALYZER_CHANGES.md  QWEN.md  README.md  app.js  audio_workflow_rules.md  contract.md  index.html  styles.css  tts_llm_cost_guidance.md  turbo_logic.md
factory_commentary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
factory_common/: agent_mode.py  image_client.py  llm_api_cache.py  llm_api_failover.py  llm_client.py  llm_client_experimental.py  llm_config.py  llm_param_guard.py  llm_router.py  paths.py  timeline_manifest.py
gh_releases_archive/: README.md
idea/: voicevox_ruby_patch_plan.md
legacy/: README.md
log_research/: LATEST_ARCHIVE.txt
logs/: tts_voicevox_reading.jsonl
progress/: README.md  audio_sync_status.json
prompts/: PROMPTS_INDEX.md  README.md  qwen_initial_prompt.txt  (+1 more)
(+14982 files in other folders)
